--- a/nginx/conf/letsencrypt-nginx.conf
+++ b/nginx/conf/letsencrypt-nginx.conf
@@ -1,12 +1,16 @@
 server {
     listen       80;
-    server_name  wmw.nctu.me;
-
-    location ~ /.well-known/acme-challenge {
-        allow all;
-        root   /usr/share/nginx/html;
-    }
+    server_name  default_server;
 
     root /usr/share/nginx/html;
     index index.html;
+
+    location ~ /.well-known {
+        allow all;
+        default_type "text/plain";
+        root /usr/share/nginx/html/temp;
+        break;
+    }
+
+    # include /etc/nginx/snippets/letsencrypt-acme-challenge.conf;
 }
